--- a/app/views/commutes/detail.html.slim
+++ b/app/views/commutes/detail.html.slim
@@ -1,7 +1,7 @@
 - title t('commutes.title')
 
 #show_command
-  = link_to t('common.title.list'), commute_path(account)
+  = link_to t('common.title.list'), commute_path(employee)
 h2 =t('.title')
 
 .box
