--- a/app/views/used_vacations/_form.html.slim
+++ b/app/views/used_vacations/_form.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  = link_to t('common.title.back'), [account, vacation]
+  = link_to t('common.title.back'), [employee, vacation]
 
 h2= t("common.title.#{action_name}")
 
