--- a/app/views/used_vacations/show.html.slim
+++ b/app/views/used_vacations/show.html.slim
@@ -1,10 +1,10 @@
 #show_command
-  - if @account.ingroup?("admin")
+  - if current_account.ingroup?("admin")
     = link_to t('common.title.edit'), [:edit, vacation, used_vacation]
     = " | "
     = link_to t('common.title.destroy'), [vacation, used_vacation], :method => :delete, :confirm => t("common.messages.delete_confirm")
     = " | "
-  = link_to t('common.title.list'), vacation_path(vacation.employee.account)
+  = link_to t('common.title.list'), vacation_path(vacation.employee)
 
 h2= t('.title')
 
