--- a/app/views/vacations/_form.html.slim
+++ b/app/views/vacations/_form.html.slim
@@ -1,9 +1,9 @@
 #show_command
-  = link_to t('common.title.back'), [account, :vacations]
+  = link_to t('common.title.back'), [employee, :vacations]
 
 h2= t("common.title.#{action_name}")
 
-= form_for [account, vacation], html: {class: "tabular"} do |f|
+= form_for [employee, vacation], html: {class: "tabular"} do |f|
   = f.error_messages
   .box
     p
