--- a/app/views/vacations/index.html.slim
+++ b/app/views/vacations/index.html.slim
@@ -11,23 +11,22 @@ table#list-table
     th= Vacation.human_attribute_name("total")
     th= Vacation.human_attribute_name("used")
     th= Vacation.human_attribute_name("remain")
-    - @accounts.each do |account|
-      - if account.employee
-        tr.selectable onclick="location.href='#{vacation_path(account)}'"
-          td=h account.name
-          - vacation = account.employee.vacations.last
-          - if vacation
-            td= "#{vacation.from} ~ #{vacation.to}"
-            td= "#{vacation.period} 일"
-            td= "#{vacation.used.total} 일"
-            td= "#{vacation.remain} 일"
-          - else
-            td
-            td
-            td
-            td
+    - @employees.each do |employee|
+      tr.selectable onclick="location.href='#{vacation_path(employee)}'"
+        td=h employee.fullname
+        - vacation = employee.vacations.last
+        - if vacation
+          td= "#{vacation.from} ~ #{vacation.to}"
+          td= "#{vacation.period} 일"
+          td= "#{vacation.used.total} 일"
+          td= "#{vacation.remain} 일"
+        - else
+          td
+          td
+          td
+          td
 
 br
 
 center
-  = will_paginate @accounts
+  = will_paginate @employees
