--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -10,5 +10,5 @@ h2= t('common.title.show')
 = group.name
 
 ul
-  - group.employees.each do |employee|
-    li= employee.fullname
+  - group.people.each do |person|
+    li= person.name
