--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -11,9 +11,10 @@ h2= t("common.title.#{action_name}")
       = f.text_field :name
     p
       = f.label :employees
-      - Employee.all.each do |employee|
-        = check_box_tag "group[employee_ids][]", employee.id, group.employees.include?(employee)
-        = employee.fullname
+      - Person.joins(:employee).where('employees.person_id = people.id').each do |person|
+        - if person.account.present?
+          = check_box_tag "group[person_ids][]", person.id, group.people.include?(person)
+          = person.name
         br
   p
     = f.submit
