--- a/app/views/vacations/_form.html.slim
+++ b/app/views/vacations/_form.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  = link_to t('common.title.back'), [employee, :vacations]
+  = link_to t('common.title.back'), vacation_path(employee)
 
 h2= t("common.title.#{action_name}")
 
