--- a/app/views/application/_changelog.html.slim
+++ b/app/views/application/_changelog.html.slim
@@ -1,3 +1,3 @@
-- if current_account.ingroup? "admin"
+- if current_account.admin?
   h3= t("common.changes")
   = render 'changelog_item', target: target
