--- a/app/views/main/_main_menu.html.slim
+++ b/app/views/main/_main_menu.html.slim
@@ -49,7 +49,7 @@ table align="center" border="0" cellspacing="5" cellpadding="5"  style="margin-t
       - if @account.employee.permission.any? {|perm| perm.name == 'contacts'}
         = link_to t("contacts.index.title"), :contacts
       
-  - if @account.ingroup?(:admin)
+  - if @account.admin?
     tr
       th style="background-color:lightgray;"
         = t("main.index.admin")
