--- a/app/views/accounts/changepw_form.html.slim
+++ b/app/views/accounts/changepw_form.html.slim
@@ -1,6 +1,6 @@
 - title t(".title")
 #show_command
-	- if @account.admin?
+	- if current_person.admin?
   	= link_to t("common.title.back"), :action => 'index'
 	- else
   	= link_to t("common.title.back"), accounts_my_path()
