--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -1,7 +1,7 @@
 -title t('.title')
 
 #show_command
-  - if @account.admin? && @account.enabled?
+  - if current_person.admin? && @account.enabled?
     =link_to t('.loginas'), :action => "loginas", :id => @account
     '  |
     =link_to t('.disable'), :action => "disable", :id => @account
