--- a/app/views/employees/index.html.slim
+++ b/app/views/employees/index.html.slim
@@ -4,11 +4,11 @@
     = t("common.title.search")
     ' :
     = text_field_tag 'q', params[:q]
-    - if current_account.admin?
+    - if current_person.admin?
       = select_tag :search_type, options_for_select(Employee::SEARCH_TYPE, params[:search_type]), "onchange" => "this.form.submit()"
 
 #show_command
-  - if current_account.admin?
+  - if current_person.admin?
     = link_to t('employees.new.title'), new_employee_path
 h2
   = t('employees.index.total')
