--- a/app/views/employees/show.html.slim
+++ b/app/views/employees/show.html.slim
@@ -1,11 +1,11 @@
 - title t('.title')
 
 #show_command
-  - if current_account.admin? or @employee == current_account.employee
+  - if current_person.admin? or @employee == current_employee
     - if @employee.joined?
       = link_to t('employees.show.pdf'), [:employment_proof, @employee]
       = " | "
-  - if current_account.admin? and !@employee.retired_on
+  - if current_person.admin? and !@employee.retired_on
     - if @employee.joined?
       = link_to t('employees.retire.title'), :action => :retire, :id => @employee
       = " | "
@@ -27,7 +27,7 @@ h2
         = Employee.human_attribute_name('person_id')
       dd
         = @employee.account.name
-      - if current_account.admin? || @employee.account == current_account
+      - if current_person.admin? || @employee.account == current_account
         = dtdd @employee, "juminno"
       = dtdd @employee, "joined_on"
       - if @employee.retired_on
@@ -39,8 +39,8 @@ h2
           = t("contacts.show.title")
         ul
           = render 'contacts/item_for_employee', contact: @employee.contact,menu: false
-      - if current_account.admin? || @employee.account == current_account
-        - if current_account.admin?
+      - if current_person.admin? || @employee == current_employee
+        - if current_person.admin?
           #show_command
             = link_to t('required_tags.new.title'), :controller => "required_tags",  :action => "new", :modelname => Employee.name, :returnurl => request.url
         h3
@@ -64,7 +64,7 @@ h2
           h3
             = t(".related_admin_actions")
           ul
-            - if current_account.admin? || @employee.account == current_account
+            - if current_person.admin? || @employee == current_employee
               li
                 = link_to t('payments.title'), payment_path(@employee.account)
               li
@@ -74,7 +74,7 @@ h2
   .clear
 
 
-- if current_account.admin?
+- if current_person.admin?
   = render 'changelog', target: @employee
 
 
