--- a/app/views/used_vacations/show.html.slim
+++ b/app/views/used_vacations/show.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  - if current_account.admin?
+  - if current_person.admin?
     = link_to t('common.title.edit'), [:edit, vacation, used_vacation]
     = " | "
     = link_to t('common.title.destroy'), [vacation, used_vacation], :method => :delete, :confirm => t("common.messages.delete_confirm")
