--- a/app/views/bank_transactions/excel.html.slim
+++ b/app/views/bank_transactions/excel.html.slim
@@ -6,7 +6,7 @@ h2= t("common.title.#{action_name}")
 = form_tag preview_bank_transactions_path(bank_account: params[:bank_account]), multipart: true, class: "tabular" do
   .box
     p
-      = label_tag :bank_account, t('.account')
+      = label_tag :bank_account, t('.type')
       = select_tag :bank_account, options_from_collection_for_select(BankAccount.all, :id, :description, params[:bank_account])
     p
       = label_tag :file, t('.file')
