--- a/app/views/cardbills/show.html.slim
+++ b/app/views/cardbills/show.html.slim
@@ -36,4 +36,4 @@ h2
   .clear
 
 = render 'changelog', target: @cardbill
-= render 'accessors/info', access_target: @cardbill
+= render 'reports/info', target: @cardbill
