--- a/app/views/card_approved_sources/find_empty_cardbills.html.slim
+++ b/app/views/card_approved_sources/find_empty_cardbills.html.slim
@@ -3,6 +3,9 @@
 
 h2
   = t('card_approved_sources.find_empty_cardbills.title')
+  = " - "
+  = @card_approved_sources.count
+  = "개"
 
 - unless @card_approved_sources.empty?
   = render 'list', card_approved_sources: @card_approved_sources
