--- a/app/views/cardbills/show.html.slim
+++ b/app/views/cardbills/show.html.slim
@@ -4,7 +4,7 @@
   - if @cardbill.used and current_user.permission? :card_used_sources
     = link_to t('cardbills.show.to_use'), @cardbill.used
     = " | "
-  -  if @cardbill.status == 'verified' and current_user.permission? :expense_reports
+  -  if @cardbill.status == 'verified'
     - if @cardbill.expense_report
       = link_to t('cardbills.show.view_expense'), @cardbill.expense_report
     - else
