--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -1,15 +1,15 @@
 -title t('.title')
 
 #show_command
-  - if current_person.admin? && @account.enabled?
-    =link_to t('.loginas'), :action => "loginas", :id => @account
+  - if current_person.admin? && @this_account.enabled?
+    =link_to t('.loginas'), :action => "loginas", :id => @this_account
     '  |
-    =link_to t('.disable'), :action => "disable", :id => @account
+    =link_to t('.disable'), :action => "disable", :id => @this_account
     '  |
-    =link_to t('.change_password'), changepw_account_path(@account)
+    =link_to t('.change_password'), changepw_account_path(@this_account)
     '  |
-  =link_to t('common.title.edit'), edit_account_path(@account)
+  =link_to t('common.title.edit'), edit_account_path(@this_account)
   '  |
   =link_to t('common.title.list'), accounts_path
 
-= render 'detail', :account => @account
+= render 'detail', :account => @this_account
