--- a/app/views/companies/_form.html.slim
+++ b/app/views/companies/_form.html.slim
@@ -49,7 +49,7 @@ h2= t("common.title.#{action_name}")
       = f.text_field :default_password
     p
       = f.label :apply_admin_id
-      = f.select :apply_admin_id, options_from_collection_for_select(Account.enabled, 'id', 'fullname', company.apply_admin_id)
+      = f.select :apply_admin_id, options_from_collection_for_select(Employee.enabled.not_retired, 'company_account', 'fullname', company.apply_admin_id)
     p
       = f.label :enrollment_items
       = f.text_field :enrollment_items
