--- a/app/views/section_enrollment/enrollments/edit.html.slim
+++ b/app/views/section_enrollment/enrollments/edit.html.slim
@@ -7,18 +7,19 @@
     = f.label :juminno
     = f.text_field :juminno
 
-    = f.fields_for :contact, @child_contact do |contact_field|
-      p
-        = contact_field.label :lastname
-        = contact_field.text_field :lastname
-      p
-        = contact_field.label :firstname
-        = contact_field.text_field :firstname
+    = f.fields_for :person do |person_field|
+      = person_field.fields_for :contact, @contact do |contact_field|
+        p
+          = contact_field.label :lastname
+          = contact_field.text_field :lastname
+        p
+          = contact_field.label :firstname
+          = contact_field.text_field :firstname
 
-      = render 'contacts/form/address', contact_form: contact_field, contact: @child_contact
-      = render 'contacts/form/email', contact_form: contact_field, contact: @child_contact
-      = render 'contacts/form/phone_number', contact_form: contact_field, contact: @child_contact
-      = render 'contacts/form/others', contact_form: contact_field, contact: @child_contact 
+        = render 'contacts/form/address', contact_form: contact_field, contact: @contact
+        = render 'contacts/form/email', contact_form: contact_field, contact: @contact
+        = render 'contacts/form/phone_number', contact_form: contact_field, contact: @contact
+        = render 'contacts/form/others', contact_form: contact_field, contact: @contact 
 
   p
     = f.submit t('section_enrollment.enrollment.edit.enrollment')
