fix seed and main menu

--- a/app/views/main/_main_menu2.html.slim
+++ b/app/views/main/_main_menu2.html.slim
@@ -2,13 +2,14 @@ div class={current_person.admin? ? "admin" : ""}
   .menubar
     .menubar_item.item1
       h2= t("main.index.human_resources")
-      ul
-        li= link_to t("employees.index.title"), :controller => "employees"
-        li= link_to t("vacations.index.title"), vacation_path(current_employee)
-        - if current_person.permission? 'commutes'
-          li= link_to t("commutes.index.title"), commute_path(current_employee)
-        - if current_account.has_payment_info
-          li= link_to t("payments.title"), payment_path(current_employee)
+      - if current_employee
+        ul
+          li= link_to t("employees.index.title"), :controller => "employees"
+          li= link_to t("vacations.index.title"), vacation_path(current_employee)
+          - if current_person.permission? 'commutes'
+            li= link_to t("commutes.index.title"), commute_path(current_employee)
+          - if current_account.has_payment_info
+            li= link_to t("payments.title"), payment_path(current_employee)
 
     .menubar_item.item2
       h2= t("main.index.finance")
