--- a/app/views/taxbills/index.html.slim
+++ b/app/views/taxbills/index.html.slim
@@ -26,11 +26,11 @@
     = " | "
     = link_to t('common.title.new'), [:new, :taxbill]
 
-- unless taxbills_pagination.empty?
+- unless @taxbills.empty?
     h2
       = t('taxbills.index.total_eng') 
       ' :
-      = taxbills_pagination.size
+      = @taxbills.size
     table#list-table
       tr
         th= Taxbill.human_attribute_name('billtype')
@@ -38,7 +38,7 @@
         th= BusinessClient.human_attribute_name('name')
         th= BusinessClient.human_attribute_name('owner')
         th= Taxbill.human_attribute_name('total')
-      - taxbills_pagination.each do |taxbill|
+      - @taxbills.each do |taxbill|
         tr.selectable onclick="location.href='#{taxbill_path(taxbill)}'"
           td=h taxbill.billtype == 'purchase' ? t('taxbills.purchase_bill') : t('taxbills.sales_bill')
           - if taxbill.transacted_at
@@ -59,7 +59,7 @@
             =h number_to_currency taxbill.total
     br
     center
-      = will_paginate taxbills_pagination
+      = will_paginate @taxbills
 - else
   h3
     = t 'taxbills.index.empty'
