--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -3,7 +3,7 @@
     - if expense_report.posting
       = link_to t("postings.show.link"), expense_report.posting
     - else
-      - if @account.permission? :postings
+      - if current_person.permission? :postings
         = link_to t("postings.new.link"), new_posting_path(report: expense_report)
         = " | "
   = link_to t("activerecord.models.#{expense_report.target_type.tableize.singularize}") + " " + t('expense_reports.show.view'), expense_report.target
