closes #10027, closes #10033, closes #10037

--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -8,7 +8,10 @@ h2
   = project.name
 .box
   dl
-    = dtdd project, "revenue"
+    dt
+     = Project.human_attribute_name("revenue")
+    dd
+     = number_to_currency project.revenue
     = dtdd project, "started_on"
     = dtdd project, "ending_on"
     - if project.completed?
