--- a/app/views/accessors/_info.html.slim
+++ b/app/views/accessors/_info.html.slim
@@ -2,13 +2,13 @@ h3
   = t('accessors.info.permissions')
 
 ul
-  - access_target.accessors.each do |accessor| 
+  - access_target.accessors.each do |accessor|
     li
       = accessor.fullname
       = "("
       = accessor.write? ? t('accessors.info.read_write') : t('accessors.info.read')
       = ")"
-      - unless accessor.person.account.admin? 
+      - unless accessor.person.admin?
         = link_to "[x]", accessors_path(accessor_id: accessor.id), :method => :delete
 
 - if access_target.access?(current_account, :write)
