--- a/app/views/contacts/_form.html.slim
+++ b/app/views/contacts/_form.html.slim
@@ -21,7 +21,7 @@ h2= t("common.title.#{action_name}")
     p
       = f.label :position
       = f.text_field :position
-    - if !@contact.new_record? && current_account.admin?
+    - if !@contact.new_record? && current_person.admin?
       p
         = f.label :owner
         = f.select :owner_id, options_from_collection_for_select(Account.enabled, 'id', 'fullname', @contact.owner_id)
