--- a/app/views/payments/_form.html.slim
+++ b/app/views/payments/_form.html.slim
@@ -1,11 +1,11 @@
 #show_command
-  = link_to t('common.title.back'), payment_path(account)
+  = link_to t('common.title.back'), payment_path(employee)
 
 h2
   = t("payments.#{action_name}.title")
 
 
-= form_for [account, payment] do |f|
+= form_for [employee, payment] do |f|
   = f.error_messages
   = f.hidden_field :payment_type
   .box
