--- a/app/views/contacts/_item.html.slim
+++ b/app/views/contacts/_item.html.slim
@@ -13,7 +13,7 @@ dl
       = "#{email.target_view}"
     dd
       = email.email
-    - if menu && contact.edit?(current_account)
+    - if menu && contact.edit?(current_person)
       dd
         = link_to t('common.link.edit'), [:edit, contact]
         = " | "
@@ -24,7 +24,7 @@ dl
       = "#{phone_number.target_view}"
     dd
       = phone_number.number
-    - if menu && contact.edit?(current_account)
+    - if menu && contact.edit?(current_person)
       dd
         = link_to t('common.link.edit'), [:edit, contact]
         = " | "
@@ -35,7 +35,7 @@ dl
       = "#{address.target_view}"
     dd
       = "#{address.country} #{address.province} #{address.city} #{address.other1} #{address.other2} #{address.postal_code}"
-    - if menu && contact.edit?(current_account)
+    - if menu && contact.edit?(current_person)
       dd
         = link_to t('common.link.edit'), [:edit, contact]
         = " | "
@@ -46,7 +46,7 @@ dl
       = "#{other.target_view}"
     dd
       = other.description
-    - if menu && contact.edit?(current_account)
+    - if menu && contact.edit?(current_person)
       dd
         = link_to t('common.link.edit'), [:edit, contact]
         = " | "
