--- a/app/views/contacts/show.html.slim
+++ b/app/views/contacts/show.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  - if contact.edit?(current_account)
+  - if contact.edit?(current_person)
     = link_to t('common.link.edit'), [:edit, contact]
     = " | "
     = link_to t('common.link.destroy'), contact, :method => :delete, confirm: t("common.messages.delete_confirm")
